[package]
name = "stylusdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]


[[bin]]
name = "my_binary"
path = "src/lib.rs"

[profile.dev]
debug = true
optimize = false

[profile.release]
debug = false
optimize = true

